BPE25-019: add Rebecca extension icon, better identifiers for elements in JS, fix title recognition on track page, improve title wrapping

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@
   padding: 0.5rem 0.75rem;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 0.5rem;
-  border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .bpe-header-logo {
@@ -54,7 +53,7 @@
 }
 
 .bpe-header-current {
-  width: 90%;
+  width: 80%;
 
   display: flex;
   flex-direction: column;
@@ -66,17 +65,16 @@
 }
 
 .bpe-header-title {
-  max-width: 87.5%;
+  max-width: 95%;
 
   line-height: 1.25;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: 500;
   color: #ffffff;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .bpe-playback-manager {
@@ -199,8 +197,9 @@
   position: relative;
   padding: 0.75rem 1rem;
   margin: 0;
-
   background: rgba(0, 0, 0, 0.2);
+
+  border-radius: 0.5rem;
 }
 
 .bpe-volume-label {
